--- a/templates/actor/actor-primary-resources.hbs
+++ b/templates/actor/actor-primary-resources.hbs
@@ -74,8 +74,7 @@
           aria-label="{{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.Level.label'}}"
         />
       </div>
-    {{/if}}
-    {{#if (eq actor.type 'npc')}}
+    {{else}}
       <header class='erps-resource-box__upper'>
         <h3 class='erps-resource-box__label'>
           {{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.CR.label'}} / {{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.XP.label'}}
