--- a/templates/item/embedded-combat-powers.hbs
+++ b/templates/item/embedded-combat-powers.hbs
@@ -35,7 +35,7 @@
                 <a
                   class="erps-items-panel__control erps-items-panel__control--view"
                   data-action="viewDoc"
-                  title="{{localize 'EVENTIDE_RP_SYSTEM.UI.View'}}"
+                  title="{{localize 'EVENTIDE_RP_SYSTEM.UI.View'}} ({{localize 'EVENTIDE_RP_SYSTEM.UI.ReadOnly'}})"
                 >
                   <i class="fas fa-eye"></i>
                 </a>
@@ -59,7 +59,10 @@
         <p>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.DropPowerHere"}}</p>
       </div>
 
-      <div class="erps-items-panel__notes">{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.Notes"}}</div>
+      <div class="erps-items-panel__notes">
+        <p>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.Notes"}}</p>
+        <p><em>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.ReadOnlyNote"}}</em></p>
+      </div>
     </div>
   </div>
 </section>
