--- a/templates/item/embedded-combat-powers.hbs
+++ b/templates/item/embedded-combat-powers.hbs
@@ -14,10 +14,11 @@
           </li>
           {{#each embeddedCombatPowers as |power|}}
             <li
-              class="erps-items-panel__item"
+              class="erps-items-panel__item erps-items-panel__item--draggable"
               data-item-id="{{power.id}}"
               data-drag="true"
               data-document-class="Item"
+              title="{{localize 'EVENTIDE_RP_SYSTEM.Item.Transformation.DragToExtract'}}"
             >
               <div class="erps-items-panel__cell erps-items-panel__cell--image">
                 <img
@@ -27,6 +28,7 @@
                   width="24"
                   height="24"
                 />
+                <i class="fas fa-arrows-alt erps-items-panel__drag-indicator" title="{{localize 'EVENTIDE_RP_SYSTEM.Item.Transformation.DragToExtract'}}"></i>
               </div>
               <div class="erps-items-panel__cell erps-items-panel__cell--name">
                 <span class="erps-items-panel__name">{{power.name}}</span>
@@ -62,6 +64,7 @@
       <div class="erps-items-panel__notes">
         <p>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.Notes"}}</p>
         <p><em>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.ReadOnlyNote"}}</em></p>
+        <p><strong>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.DragNote"}}</strong></p>
       </div>
     </div>
   </div>
