--- a/templates/macros/parts/character-effects.hbs
+++ b/templates/macros/parts/character-effects.hbs
@@ -71,8 +71,6 @@
               <button
                 type="button"
                 class="erps-number-input__button erps-number-input__button--decrement"
-                data-action="decrementEffect"
-                data-index="{{@index}}"
               >
                 <i class="fas fa-minus"></i>
               </button>
@@ -83,12 +81,11 @@
                 value="{{value}}"
                 step="1"
                 data-index="{{@index}}"
+                data-type="visible"
               >
               <button
                 type="button"
                 class="erps-number-input__button erps-number-input__button--increment"
-                data-action="incrementEffect"
-                data-index="{{@index}}"
               >
                 <i class="fas fa-plus"></i>
               </button>
