--- a/templates/item/attribute-parts/transformation.hbs
+++ b/templates/item/attribute-parts/transformation.hbs
@@ -15,7 +15,7 @@
       <div class="form-group">
         <label class="erps-input-label">{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.ResolveAdjustment"}}</label>
         <div class="erps-number-input">
-          <button type="button" class="erps-number-input__button erps-number-input__button--decrement" data-action="decrementTransformationStat" data-field="resolveAdjustment">
+          <button type="button" class="erps-number-input__button erps-number-input__button--decrement">
             <i class="fas fa-minus"></i>
           </button>
           <input
@@ -26,7 +26,7 @@
             step="1"
             data-dtype="Number"
           >
-          <button type="button" class="erps-number-input__button erps-number-input__button--increment" data-action="incrementTransformationStat" data-field="resolveAdjustment">
+          <button type="button" class="erps-number-input__button erps-number-input__button--increment">
             <i class="fas fa-plus"></i>
           </button>
         </div>
@@ -35,7 +35,7 @@
       <div class="form-group">
         <label class="erps-input-label">{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.PowerAdjustment"}}</label>
         <div class="erps-number-input">
-          <button type="button" class="erps-number-input__button erps-number-input__button--decrement" data-action="decrementTransformationStat" data-field="powerAdjustment">
+          <button type="button" class="erps-number-input__button erps-number-input__button--decrement">
             <i class="fas fa-minus"></i>
           </button>
           <input
@@ -46,7 +46,7 @@
             step="1"
             data-dtype="Number"
           >
-          <button type="button" class="erps-number-input__button erps-number-input__button--increment" data-action="incrementTransformationStat" data-field="powerAdjustment">
+          <button type="button" class="erps-number-input__button erps-number-input__button--increment">
             <i class="fas fa-plus"></i>
           </button>
         </div>
